[project]
name = "ocean-simulation"
version = "0.1.0"
description = "Ocean simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.isort]
profile = "black"
force_single_line = true

[dependency-groups]
dev = [
    "ptpython>=3.0.30",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]
